fixed progress bar seeking

--- a/static/index.html
+++ b/static/index.html
@@ -41,9 +41,11 @@
             
 
             <!-- Progress Bar -->
+            <div class="progress-container">
             <div style="margin: 1rem 0;">
                 <div style="background: #000; height: 20px; border: 1px solid rgb(0, 0, 0); position: relative;">
                     <div id="progress-bar" style="background: #0f0; height: 100%; width: 0%; transition: width 0.1s;"></div>
+                </div>
                 </div>
             </div>
             </div>
