--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <title>Yurt Radio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tuicss@2.1.2/dist/tuicss.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="./resources/favicon.ico"
     <script src="https://cdn.jsdelivr.net/npm/tuicss@2.1.1/dist/tuicss.min.js"></script>
 </head>
 <body>
