--- a/static/index.html
+++ b/static/index.html
@@ -6,12 +6,12 @@
     <title>Yurt Radio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tuicss@2.1.2/dist/tuicss.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="./resources/favicon.ico"
+    <link rel="icon" type="image/x-icon" href="./resources/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/tuicss@2.1.1/dist/tuicss.min.js"></script>
 </head>
 <body>
     <div class="tui-screen-1024-768 bordered centered">
-        <img src="./resources/yurttech.png" width="287px" height="147px" style="display: block; margin: auto;">
+        <img src="./resources/yurttech.png" style="display: block; margin: auto; max-width: 287px; width: 100%; height: auto;">
         <!-- Header -->
         <fieldset class="tui-fieldset">
             <div class="center">Music from The Yurt (2020-present)</div>
@@ -25,7 +25,7 @@
             <!-- Track Information Display -->
             <div class="center">
             <div class="tui-window white-168">
-            <fieldset class="tui-fieldset" style="width: 600px;">
+            <fieldset class="tui-fieldset" style="max-width: 600px;">
                 <legend>Now Playing</legend>
                 <div class="center" style="padding: 1rem;">
                     <div id="track-title" style="font-weight: bold; font-size: 1.2rem; margin-bottom: 0.5rem;">
