updated about text

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yurt Radio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tuicss@2.1.2/dist/tuicss.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2">
     <link rel="icon" type="image/x-icon" href="./resources/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/tuicss@2.1.1/dist/tuicss.min.js"></script>
 </head>
@@ -77,10 +77,13 @@
                 <div class="tui-window">
                     <fieldset class="tui-fieldset">
                         <legend class="white-255-text">about</legend>
-                        <div style="max-width: 400px;">Yurt Radio is a collection of music shared in the Yurt discord server dating back to 2020. These are snippets, songs, and remixes created by members of the yurt</div>
-                        <br>
+                        <div style="max-width: 400px;">Yurt Radio is a collection of music files shared in the Yurt discord server from 2020-present. </div>
                         <br>
                         <div class="tui-divider"></div>
+                        <br>
+                        <div style="max-width: 400px;">Each song, demo, snippet, or remix you'll hear was shared to the server by one of our members at some point in the past.
+                            While going through old chats together, we discovered how awesome much of the music we had shared was. So I created
+                            this site to serve as a sort-of internet mixtape, a monument to the immense talent and friendship we've shared with one another.</div>
                         <br>
                         <button class="tui-button tui-modal-close-button right" data-modal="modal">close</button>
                     </fieldset>
