--- a/static/index.html
+++ b/static/index.html
@@ -3,95 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yurt Radio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tuicss@2.1.2/dist/tuicss.min.css">
-    <link rel="stylesheet" href="css/style.css?v=2">
-    <link rel="icon" type="image/x-icon" href="./resources/favicon.ico">
-    <script src="https://cdn.jsdelivr.net/npm/tuicss@2.1.1/dist/tuicss.min.js"></script>
+    <title>Yurt Tech</title>
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
+
+    <!-- Three.js importmap — ES module resolution -->
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/"
+        }
+    }
+    </script>
+
+    <style>
+        /* Home page: canvas is fixed fullscreen, no scroll needed */
+        html, body {
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <div class="tui-screen-1024-768 bordered centered">
-        <img src="./resources/yurttech.png" style="display: block; margin: auto; max-width: 287px; width: 100%; height: auto;">
-        <!-- Header -->
-        <fieldset class="tui-fieldset">
-            <div class="center">Music from The Yurt (2020-present)</div>
-        </fieldset>
+    <!-- WebGL canvas: z-index 0, position fixed via site.css -->
+    <canvas id="home-canvas"></canvas>
 
-        <!-- Main Player -->
-        <main style="padding: 1rem;">
-            <!-- Hidden audio element (controlled via JavaScript) -->
-            <audio id="audio-player"></audio>
-            <!-- Track Information Display -->
-            <div class="center">
-            <div class="tui-window white-168">
-            <fieldset class="tui-fieldset" style="width: 600px;">
-                <legend>Now Playing</legend>
-                <div class="center" style="padding: 1rem;">
-                    <div id="track-title" style="font-weight: bold; font-size: 1.2rem; margin-bottom: 0.5rem;">
-                        Welcome to Yurt Radio
-                    </div>
-                    <div id="track-artist" style="margin-bottom: 0.5rem;">
-                        Press Play to start
-                    </div>
-                    <div id="track-duration" style="font-family: monospace;">
-                        0:00 / 0:00
-                    </div>
-                </div>
-            </fieldset>
-            <!-- Progress Bar -->
-            <div class="progress-container">
-            <div style="margin: 1rem 0;">
-                <div style="background: #000; height: 20px; border: 1px solid rgb(0, 0, 0); position: relative;">
-                    <div id="progress-bar" style="background: #0f0; height: 100%; width: 0%; transition: width 0.1s;"></div>
-                </div>
-                </div>
-            </div>
-            </div>
-            </div>
+    <!-- Film grain SVG filter definition (hidden, zero-size) -->
+    <svg style="position:absolute;width:0;height:0;overflow:hidden" aria-hidden="true">
+        <defs>
+            <filter id="grain-filter" x="0%" y="0%" width="100%" height="100%"
+                    color-interpolation-filters="sRGB">
+                <feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="1"
+                              stitchTiles="stitch" result="stitch"/>
+                <feColorMatrix type="saturate" values="0" in="noise" result="grayNoise"/>
+                <feBlend in="SourceGraphic" in2="grayNoise" mode="overlay"/>
+            </filter>
+        </defs>
+    </svg>
 
-            <!-- Player Controls -->
-            <div class="center" style="margin: 1rem 0;">
-                <button id="play-btn" class="tui-button">
-                    <span id="play-icon">▶</span> <span id="play-text">PLAY</span>
-                </button>
-                <button id="next-btn" class="tui-button">⏭ NEXT</button>
-            </div>
+    <div class="grain-overlay" aria-hidden="true"></div>
 
-            <!-- Volume Control -->
-            <div style="margin: 1rem 0;" id="volume-slider">
-                <label for="volume">Volume: <span id="volume-value">70</span>%</label>
-                <input type="range" id="volume" min="0" max="100" value="70" style="width: 100%;">
-            </div>
+    <!-- Navbar: z-index 1000 via site.css, floats over canvas -->
+    <nav class="site-nav">
+        <span class="nav-brand">YURT TECH</span>
+        <a href="/">HOME</a>
+        <a href="/worlds">WORLDS</a>
+        <a href="/tools">TOOLS</a>
+        <a href="/imagery">IMAGERY</a>
+        <a href="/radio">RADIO</a>
+        <a href="/notes">NOTES</a>
+    </nav>
 
-            <!-- Loading/Error States -->
-            <div id="status-message" class="center" style="min-height: 1.5rem; margin-top: 1rem;"></div>
-        </main>
+    <!-- Logo: z-index 2, centered via site.css -->
+<!--     <div class="home-logo-wrap">
+        <img src="resources/yurttech.png" alt="Yurt Tech" class="home-logo">
+    </div> -->
 
-        <!-- Footer with Stats -->
-        <fieldset class="tui-fieldset" style="margin-top: 1rem;">
-            <div class="center" style="padding: 0.5rem;">
-                <div id="stats-text" style="font-family: monospace; font-size: 0.9rem; color: #000;">Loading stats...</div>
-                <button class="tui-button tui-modal-button" data-modal="modal" style="margin-top: 1rem;">◄ about ►</button>
-                <div class="tui-overlap"></div>
-                <div id="modal" class="tui-modal">
-                <div class="tui-window">
-                    <fieldset class="tui-fieldset">
-                        <legend class="white-255-text">about</legend>
-                        <div style="max-width: 400px;">Yurt Radio is a collection of music files shared in the Yurt discord server from 2020-present. </div>
-                        <br>
-                        <div class="tui-divider"></div>
-                        <br>
-                        <div style="max-width: 400px;">Each song, demo, snippet, or remix you'll hear was shared to the server by one of our members at some point in the past.
-                            While going through old chats together, we discovered how awesome much of the music we had shared was. So I created
-                            this site to serve as a sort-of internet mixtape, a monument to the immense talent and friendship we've shared with one another.</div>
-                        <br>
-                        <button class="tui-button tui-modal-close-button right" data-modal="modal">close</button>
-                    </fieldset>
-                </div>
-            </div>
-            </div>
-        </fieldset>
-    </div>
-    <script src="js/radio.js"></script>
+    <script type="module" src="js/home.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
